--- a/app/assets/stylesheets/topmenu.css.scss
+++ b/app/assets/stylesheets/topmenu.css.scss
@@ -22,6 +22,11 @@
 
 .top_menu {
   padding-top: 0px;
+    
+  .row {
+      margin: 0
+  }
+
   a {
     color: white;
     text-decoration: none;
@@ -66,6 +71,15 @@
 }
 
 @media (max-width: 992px) {
+
+  .top_menu {
+    padding: 0;
+  }
+
+  .coverphoto {
+    padding: 0;
+  }
+
   .header-nav a {
     font-size: 18px;
   }
